# cbc_utils

./: .gitignore  README.md  pyproject.toml
app/: circle_data.py  sample.env  settings.py
cbc-results/: package-lock.json
cbc-results/data-entry/: README.md  jest.config.cjs  package-lock.json  package.json  sample.env  tsconfig.json
cbc-results/data-entry/audubon/: .audubon-env  README.md  audubon-data-entry.ts  audubon.ts  sample.audubon.env  sample.env  tsconfig.json
cbc-results/data-entry/csv-data-files/: NACC_list_species.csv  cbc-results-example.csv  mn-cbc-species.csv
cbc-results/data-entry/mou/: .mou-env  README.md  mou-data-entry.ts  (+2 more)
cbc-results/data-processing/: Bloomington CBC Results Example.xlsx
cbc_results/audubon/: README.md  audubon.ts  package-lock.json
cbc_results/data-entry/: README.md
mapping-utils/: pyproject.toml  setup.sh
mapping-utils/kml/: cbc_hotspots.kml  cbc_obs_map.kml  cbc_obs_map.kmz  cbc_obs_notable_confirmed.kml  cbc_obs_notable_provisional.kml  cbc_obs_recent_confirmed.kml  cbc_obs_recent_provisional.kml  simple_cbc_circle.kml  simple_cbc_circle.kml_hotspots.kmz
mapping-utils/src/: circle_data_csv.py  circle_ebird_data_kml.py  create_simple_kml_circle.py  ebird.py  root_dir.py
mapping-utils/test/fixture/: hotspots.json
mapping_utils/: README.md
mapping_utils/kml/: cbc_obs_recent_confirmed.kml  doc.kml  simple_cbc_circle.kml_obs.kmz
mapping_utils/src/: create_simple_kml_circle.py  settings.py
participant-utils/google-app-scripts/: CbcSignupReply.gs
participant_utils/: README.md
src/: circle_data.py
(+17 files in other folders)
